--- a/translations/messages.en.xliff
+++ b/translations/messages.en.xliff
@@ -100,7 +100,7 @@
             </trans-unit>     
             <trans-unit id="_form.body">            
                 <source>Body</source>
-                <target>Body</target>
+                <target>Message</target>
             </trans-unit>   
   
 <!--|| GENERIC ||-->
