--- a/translations/messages.en.xliff
+++ b/translations/messages.en.xliff
@@ -116,7 +116,88 @@
                 <source>Captcha</source>
                 <target>Captcha</target>
             </trans-unit>
-              
+            <trans-unit id="_username">            
+                <source>Username</source>
+                <target>Username</target>
+            </trans-unit>
+            <trans-unit id="_username.canonical">            
+                <source>Username canonical</source>
+                <target>Username canonical</target>
+            </trans-unit>
+            <trans-unit id="_email.canonical">            
+                <source>Email canonical</source>
+                <target>Email canonical</target>
+            </trans-unit>
+            <trans-unit id="_enabled">            
+                <source>Enabled</source>
+                <target>Enabled</target>
+            </trans-unit>
+            <trans-unit id="_salt">            
+                <source>Salt</source>
+                <target>Salt</target>
+            </trans-unit>
+            <trans-unit id="_password">            
+                <source>Password</source>
+                <target>Password</target>
+            </trans-unit>
+            <trans-unit id="_last.login">            
+                <source>Last login</source>
+                <target>Last login</target>
+            </trans-unit>
+            <trans-unit id="_confirmation.token">            
+                <source>Confirmation token</source>
+                <target>Confirmation token</target>
+            </trans-unit>
+            <trans-unit id="_password.requested.at">            
+                <source>Password requested at</source>
+                <target>Password requested at</target>
+            </trans-unit>
+            <trans-unit id="_roles">            
+                <source>Roles</source>
+                <target>Roles</target>
+            </trans-unit>
+            <trans-unit id="_0">            
+                <source>0</source>
+                <target>0</target>
+            </trans-unit>
+<!--|| ADMIN ||-->
+            <trans-unit id="_role.admin">            
+                <source>role.admin</source>
+                <target>Admin</target>
+            </trans-unit> 
+            <trans-unit id="_admin.panel">            
+                <source>admin.panel</source>
+                <target>Admin Panel</target>
+            </trans-unit> 
+ <!--|| LOGIN (FOSU) ||-->
+            <trans-unit id="_login.login">
+              <source>login.login</source>
+              <target>Login</target>
+            </trans-unit>
+            <trans-unit id="_login.logout">
+              <source>login.logout</source>
+              <target>Logout</target>
+            </trans-unit>
+            <trans-unit id="_login.register">
+              <source>login.register</source>
+              <target>Register</target>
+            </trans-unit>
+            <trans-unit id="_login.title">
+              <source>login.title</source>
+              <target>Login to Your Account</target>
+            </trans-unit>
+            <trans-unit id="_login.register.title">
+              <source>login.register.title</source>
+              <target>Register a New Account</target>
+            </trans-unit>
+            <trans-unit id="_login.forgot.password">
+              <source>login.forgot.password</source>
+              <target>Forgot Password</target>
+            </trans-unit>
+            <trans-unit id="_login.submit">
+              <source>login.submit</source>
+              <target>Submit</target>
+            </trans-unit>             
         </body>
      </file>
 </xliff>
